--- a/Makefile.common
+++ b/Makefile.common
@@ -339,10 +339,10 @@ nix-gc:
 
 nix-Linux:
 	export LC_ALL=C.UTF-8 && if ! test -x ~/.nix-profile/bin/nix; then $(MAKE) nix-Linux-bootstrap; fi
-	if test "$(shell which direnv pinentry nixpkgs-fmt | wc -l)" != "3"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry,nixpkgs-fmt}; fi
+	if test "$(shell which direnv pinentry nixpkgs-fmt | wc -l)" != "3"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,pinentry,nixpkgs-fmt}; fi
 
 nix-Darwin:
-	if test "$(shell which direnv pinentry nixpkgs-fmt | wc -l)" != "3"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,direnv,pinentry,nixpkgs-fmt}; fi
+	if test "$(shell which direnv pinentry nixpkgs-fmt | wc -l)" != "3"; then export LC_ALL=C.UTF-8 && nix profile install nixpkgs\#{nix-direnv,pinentry,nixpkgs-fmt}; fi
 	sudo ln -nfs $(shell which pinentry-mac) .nix-profile/bin/pinentry
 
 prune:
