fix autosave: afterDelay

--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -1,5 +1,5 @@
 {
-    "files.autoSave": "on",
+    "files.autoSave": "afterDelay",
     "editor.formatOnSave": true,
     "editor.minimap.enabled": false,
     "extensions.ignoreRecommendations": true,
