--- a/Makefile.common
+++ b/Makefile.common
@@ -86,6 +86,7 @@ install-inner:
 	mark -- dotfiles
 	if test -n "$${GIT_AUTHOR_NAME:-}"; then \
 		mkdir -p ~/.config/coderv2/dotfiles; \
+		mkdir -p /home/ubuntu/work/.codespaces/.persistedshare; \
 		rm -rf ~/work/.codespaces/.persistedshare/dotfiles; \
 		ln -nfs ~/.config/coderv2/dotfiles ~/work/.codespaces/.persistedshare/dotfiles; \
 		coder dotfiles --yes https://github.com/$${GIT_AUTHOR_NAME}/dotfiles; \
