--- a/Makefile.common
+++ b/Makefile.common
@@ -267,7 +267,7 @@ registry:
 	#control apply -f etc/local-registry-hosting.yaml
 
 pull-repos: # Pull dev, app, home, and password-store repos
-	for a in . work/app work/lib work/pkg .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
+	for a in . .dotfiles .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
 
 global: # Provision global from control plane
 	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal \
