--- a/Makefile.common
+++ b/Makefile.common
@@ -26,7 +26,7 @@ trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
 
 macos:
-	-$(shell which gpg-agent) --daemon
+	-$(shell which gpg-agent) --daemon --pinentry-program $(which pinentry-mac)
 	for ip in $(dummy_ip); do if ! ifconfig lo0 | grep "inet $$ip"; then sudo ifconfig lo0 alias "$$ip" netmask 255.255.255.255; fi; done;
 	ifconfig lo0
 	defaults write -g ApplePressAndHoldEnabled -bool false
