try signature-less nix on macos

--- a/etc/nix.conf
+++ b/etc/nix.conf
@@ -2,8 +2,8 @@
 # sudo launchctl start org.nixos.nix-daemon
 
 build-users-group = nixbld
-substituters = https://cache.nixos.org https://defn.cachix.org file:///tmp/cache/nix
+substituters = https://cache.nixos.org https://defn.cachix.org file:///tmp/cache/nix?trusted=1 
 trusted-substituters = file:///tmp/cache/nix
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA=
 trusted-users = root defn
-require-sigs = false
+require-sigs = true
