--- a/etc/nix.conf
+++ b/etc/nix.conf
@@ -1,8 +1,9 @@
+# sudo cp etc/nix.conf /etc/nix/
 # sudo launchctl stop org.nixos.nix-daemon
 # sudo launchctl start org.nixos.nix-daemon
 
 build-users-group = nixbld
-substituters = https://cache.nixos.org https://defn.cachix.org file:///tmp/cache/nix?trusted=1 
+substituters = https://cache.nixos.org https://defn.cachix.org file:///tmp/cache/nix?trusted=1
 trusted-substituters = file:///tmp/cache/nix
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA=
 trusted-users = root defn
