--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,10 @@
 use flake
 
-export CACHIX_AUTH_TOKEN="$(pass CACHIX_AUTH_TOKEN)"
-export CACHIX_SIGNING_KEY="$(pass CACHIX_SIGNING_KEY)"
+xCACHIX_AUTH_TOKEN="$(pass CACHIX_AUTH_TOKEN)"
+if [[ -n "$xCACHIX_AUTH_TOKEN" ]]; then
+    xCACHIX_SIGNING_KEY="$(pass CACHIX_SIGNING_KEY)"
+    if [[ -n "$xCACHIX_SIGNING_KEY" ]]; then
+        export CACHIX_AUTH_TOKEN="${xCACHIX_AUTH_TOKEN}"
+        export CACHIX_SIGNING_KEY="${xCACHIX_SIGNING_KEY}"
+    fi
+fi
