--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,6 @@
 use flake
 
-xCACHIX_AUTH_TOKEN="$(pass CACHIX_AUTH_TOKEN)"
+xCACHIX_AUTH_TOKEN="$(pass CACHIX_AUTH_TOKEN 2>/dev/null)"
 if [[ -n "$xCACHIX_AUTH_TOKEN" ]]; then
     xCACHIX_SIGNING_KEY="$(pass CACHIX_SIGNING_KEY)"
     if [[ -n "$xCACHIX_SIGNING_KEY" ]]; then
