--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 use flake
 
+# cachix
 xCACHIX_AUTH_TOKEN="$(pass CACHIX_AUTH_TOKEN 2>/dev/null)"
 if [[ -n "$xCACHIX_AUTH_TOKEN" ]]; then
     xCACHIX_SIGNING_KEY="$(pass CACHIX_SIGNING_KEY)"
@@ -8,3 +9,6 @@ if [[ -n "$xCACHIX_AUTH_TOKEN" ]]; then
         export CACHIX_SIGNING_KEY="${xCACHIX_SIGNING_KEY}"
     fi
 fi
+
+# fly
+export FLY_API_TOKEN="$(pass FLY_API_TOKEN 2>/dev/null)"
