--- a/Makefile.common
+++ b/Makefile.common
@@ -166,19 +166,6 @@ sync: # Sync all the artifacts
 sync-images: # Sync images to local cache
 	cat .image-versions.txt | bin/runmany 4 'skopeo copy docker://$$1 docker://127.0.0.1:5000/$${1#*/} --multi-arch all --dest-tls-verify=false'
 
-cluster:
-	cd d/k3d && $(MAKE) build name=$(context) app=$(app)
-	@$(MAKE) $@-inner name=$(name)
-
-cluster-inner:
-	-k3d cluster delete $(name)
-	@k3d cluster create $(name) \
-		--k3s-node-label env=$(name)@server:0 \
-		--config etc/k3d.yaml \
-		--registry-config etc/k3d-registries.yaml $(DEFN_DEV_HOST_PORTMAPS) \
-		--env bar=baz@server:0
-	docker --context=host update --restart=no $(context)-server-0
-
 vault-unseal:
 	pass Unseal_Key_1 | curl -sSL -X PUT -d @<(jq -nrR 'inputs|{key:.}|@json') http://localhost:8200/v1/sys/unseal
 	pass Unseal_Key_3 | curl -sSL -X PUT -d @<(jq -nrR 'inputs|{key:.}|@json') http://localhost:8200/v1/sys/unseal
@@ -236,17 +223,31 @@ debug-host:
 debug:
 	control debug -n "$(n)" "$(pod)" --image ghcr.io/defn/dev:latest-dev -it -- bash
 
-this:
-	rm -rf tmp
-	mkdir tmp
-	mkdir -p tmp/$(name)/var/lib/tailscale
-	mkdir -p tmp/$(name)/var/lib/tailscale/pod
-	mkdir -p tmp/$(name)/var/lib/rancher/k3s/server/tls
-	(cd tmp/$(name) && pass tailscale_k3d-$(name) | base64 -d | tar xvf -)
-	(cd tmp/$(name)/var/lib/tailscale/pod && pass tailscale_$(name)-0 | base64 -d | tar xvf -)
-	for a in sa-signer.key sa-signer.key.pub sa-signer-pkcs8.pub; do (cd tmp/$(name)/var/lib/rancher/k3s/server/tls && pass piw-$(name)-$$a | base64 -d > $$a); done
-	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64 | xargs | sed 's# ##g')" \
-		$(MAKE) cluster name=$(name)
+global: # Provision global zone from control plane
+	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.docker.internal \
+		DEFN_DEV_NAME=k3d-$@ \
+		DOCKER_CONTEXT=host \
+		$(MAKE) cluster name=$@
+
+cluster:
+	-k3d cluster delete $(name)
+	for a in tailscale irsa; do \
+		docker volume rm $(name)-tailscale || true; \
+		docker volume create $(name)-tailscale; \
+		done
+	for a in tailscale irsa; do \
+		(pass $${a}_$(name) | base64 -d) | docker run --rm -i \
+			-v $(name)-tailscale:/var/lib/tailscale \
+			-v $(name)-irsa:/var/lib/rancher/k3s/server/tls \
+			ubuntu bash -c 'cd / & tar xvf -'; \
+		done
+	@k3d cluster create $(name) \
+		--config etc/k3d.yaml \
+		--registry-config etc/k3d-registries.yaml $(DEFN_DEV_HOST_PORTMAPS) \
+		--volume $(name)-tailscale:/var/lib/tailscale@server:0 \
+		--volume $(name)-irsa:/var/lib/rancher/k3s/server/tls2@server:0 \
+		--k3s-node-label env=$(name)@server:0
+	docker --context=host update --restart=no $(context)-server-0
 
 registry:
 	-k3d registry create registry --port 0.0.0.0:5000
@@ -254,29 +255,6 @@ registry:
 
 pull-repos: # Pull dev, app, home, and password-store repos
 	for a in . .dotfiles .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
-
-global: # Provision global from control plane
-	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.docker.internal \
-		DEFN_DEV_NAME=k3d-$@ \
-		DOCKER_CONTEXT=host \
-		$(MAKE) this name=$@
-
-vc%:
-	$(MAKE) control-$@
-
-control-%:
-	$(MAKE) ec2
-	kustomize build --enable-helm ~/work/app/k/$@ | $(first) apply -f -
-	while ! $(first) -n $@ get secrets vc-vcluster >/dev/null; do sleep 10; done
-	$(MAKE) connect_$@
-	while ! $@ get -n kube-system pods >/dev/null; do sleep 1; done
-	argocd cluster add vcluster-$@ --yes --upsert
-	$(first) apply -f app/e/vcluster-$@.yaml
-
-connect_%:
-	$(shell echo $(second_) | cut -d- -f1) -n $(second_) get secrets vc-vcluster -o json | jq -r '.data.config | @base64d' | yq '.clusters[].cluster.server |= "https://vcluster.$(second_).svc.cluster.local" | del(.["current-context"])' -y | sed 's#my-vcluster#vcluster-$(second_)#' > ~/.kube/$(second_)
-	env KUBECONFIG=~/.kube/$(second_):~/.kube/config kubectl config view --flatten > ~/.kube/config.$(second_)
-	mv ~/.kube/config.$(second_) ~/.kube/config
 
 ec2:
 	pass hello
