--- a/Makefile.common
+++ b/Makefile.common
@@ -224,12 +224,13 @@ debug:
 	control debug -n "$(n)" "$(pod)" --image ghcr.io/defn/dev:latest-dev -it -- bash
 
 global: # Provision global zone from control plane
-	env DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.docker.internal \
+	env DEFN_DEV_HOST_PORT=6443 DEFN_DEV_HOST_API=100.64.110.16 \
 		DEFN_DEV_NAME=k3d-$@ \
 		DOCKER_CONTEXT=host \
 		$(MAKE) cluster name=$@
 	kubectl config set-context k3d-global --cluster=k3d-global --user=admin@k3d-global --namespace argocd
 	kubectl config use-context k3d-global
+	argocd cluster add --core --yes --upsert k3d-global
 
 cluster:
 	-k3d cluster delete $(name)
