apply cluster environment config

--- a/Makefile.common
+++ b/Makefile.common
@@ -228,10 +228,11 @@ global: # Provision global zone from control plane
 		DEFN_DEV_NAME=k3d-$@ \
 		DOCKER_CONTEXT=host \
 		$(MAKE) cluster name=$@
-	kubectl config set-context k3d-global --cluster=k3d-global --user=admin@k3d-global --namespace argocd
-	kubectl config use-context k3d-global
-	while ! app list; do sleep 5; done
-	argocd cluster add --core --yes --upsert k3d-global
+	kubectl config set-context k3d-$@ --cluster=k3d-$@ --user=admin@k3d-$@ --namespace argocd
+	kubectl config use-context k3d-$@
+	while ! app list 2>/dev/null; do date; sleep 5; done
+	argocd cluster add --core --yes --upsert k3d-$@
+	kubectl --context k3d-$@ apply -f ~/.dotfiles/e/k3d-$@.yaml 
 
 cluster:
 	-k3d cluster delete $(name)
