--- a/w/k3d/k3d.yaml
+++ b/w/k3d/k3d.yaml
@@ -11,6 +11,9 @@ volumes:
   - volume: work:/mnt/work
     nodeFilters:
       - server:0
+  - volume: ${DEFN_DEV_NAME}-nix:/nix
+    nodeFilters:
+      - server:0
   - volume: ${DEFN_DEV_NAME}-earthly:/mnt/earthly
     nodeFilters:
       - server:0
