--- a/Makefile.common
+++ b/Makefile.common
@@ -77,11 +77,14 @@ logout:
 	-echo RELOADAGENT | gpg-connect-agent
 
 login:
-	mark configure kubeconfig, argocd
+	mark kubeconfig, argocd
 	if test -f /run/secrets/kubernetes.io/serviceaccount/ca.crt; then $(MAKE) kubeconfig; $(MAKE) argocd-login || true; fi
+	mark github
+	$(MAKE) github-login
 
 github-login:
 	if ! gh auth status; then echo Y | gh auth login -p https -h github.com -w; fi
+	-gh extension install cli/gh-webhook
 
 pull-repos: # Pull dev, app, home, and password-store repos
 	for a in . .dotfiles .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
