build without wh

--- a/.config/nix/nix-earthly.conf
+++ b/.config/nix/nix-earthly.conf
@@ -1,4 +1,4 @@
 experimental-features = nix-command flakes
-substituters = https://cache.nixos.org http://192.168.65.2:5001/nix?priority=2 https://wh.fly.dev?priority=30
+substituters = https://cache.nixos.org http://192.168.65.2:5001/nix?priority=2 
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA= wh.fly.dev:CY8OGUBrwUv+fg5H5RJxEIc1gO/sp9LgwAPG6Ln7tfU=
 require-sigs = true
