--- a/w/k3d/secrets.yaml
+++ b/w/k3d/secrets.yaml
@@ -17,3 +17,26 @@ spec:
   dataFrom:
   - extract:
       key: hello/earth
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: hello
+  namespace: default
+  annotations:
+    eks.amazonaws.com/role-arn: "arn:aws:iam::319951235442:role/meh"
+    eks.amazonaws.com/sts-regional-endpoints: "true"
+    eks.amazonaws.com/token-expiration: "3600"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: hello
+  namespace: default
+spec:
+  serviceAccountName: hello
+  containers:
+  - name: hello
+    image: ubuntu
+    command: [ "bash", "-c" ]
+    args: [ "sleep infinity" ]
