use nix image for shell

--- a/w/k3d/secrets.yaml
+++ b/w/k3d/secrets.yaml
@@ -37,6 +37,6 @@ spec:
   serviceAccountName: hello
   containers:
   - name: hello
-    image: ubuntu
+    image: ghcr.io/defn/dev:latest-nix-installed
     command: [ "bash", "-c" ]
     args: [ "sleep infinity" ]
