load environment using withde

--- a/Makefile.common
+++ b/Makefile.common
@@ -146,5 +146,6 @@ dev:
 
 up:
 	sudo touch /var/run/utmp
+	pass hello || gpg-agent --daemon
 	pass hello
-	screen -DRR tilt -m bash -il -c ". .bashrc; PATH=$PATH:/usr/bin:/bin; $$(which tilt) up"
+	screen -DRR tilt -m bash -il -c "~/bin/withde ~ $$(which tilt) up"
