--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,11 @@
 
 [pull]
   rebase = false
+
+[credential "https://github.com"]
+	helper =
+	helper = !gh auth git-credential
+
+[credential "https://gist.github.com"]
+	helper =
+	helper = !gh auth git-credential
