ignore git large files

--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -50,5 +50,6 @@
         "/home/ubuntu/work/**": true
     },
     "nix.formatterPath": "/home/ubuntu/.nix-profile/bin/nixpkgs-fmt",
-    "terraform.languageServer.enable": false
+    "terraform.languageServer.enable": false,
+    "git.ignoreLimitWarning": true
 }
