--- a/Makefile.common
+++ b/Makefile.common
@@ -90,6 +90,7 @@ github-login:
 	if ! gh auth status; then echo Y | gh auth login -p https -h github.com -w; fi
 	-gh extension install cli/gh-webhook
 	if test -n "$${GIT_AUTHOR_NAME:-}"; then pass GHCR_TOKEN | docker login ghcr.io -u $$GIT_AUTHOR_NAME --password-stdin; fi
+	vault login -method=github token="$$(cat ~/.config/gh/hosts.yml  | yq -r '.["github.com"].oauth_token')"
 
 pull-repos: # Pull dev, app, home, and password-store repos
 	for a in . .dotfiles .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
