--- a/Makefile.common
+++ b/Makefile.common
@@ -57,7 +57,7 @@ install-inner:
 	fi
 
 	mark configure gpg
-	if test -d ~/.password-store/home/.gnupg; then rsync -ia ~/.password-store/config/gnupg-config/. ~/.gnupg/.; fi
+	if test -d ~/.password-store/config/gnupg-config/.; then rsync -ia ~/.password-store/config/gnupg-config/. ~/.gnupg/.; fi
 	$(MAKE) perms
 	env GPG_TTY=$$(tty) $(MAKE) init-gpg
 
