--- a/Makefile.common
+++ b/Makefile.common
@@ -43,6 +43,11 @@ install-inner:
 		fi; \
 	fi
 
+	mark configure gpg
+	if test -d ~/.password-store/config/gnupg-config/.; then rsync -ia ~/.password-store/config/gnupg-config/. ~/.gnupg/.; fi
+	$(MAKE) perms
+	env GPG_TTY=$$(tty) $(MAKE) init-gpg
+
 	mark dotfiles
 	if test -n "$${GIT_AUTHOR_NAME:-}"; then \
 		mkdir -p ~/.config/coderv2/dotfiles; \
@@ -56,20 +61,10 @@ install-inner:
 		fi; \
 	fi
 
-	mark configure gpg
-	if test -d ~/.password-store/config/gnupg-config/.; then rsync -ia ~/.password-store/config/gnupg-config/. ~/.gnupg/.; fi
-	$(MAKE) perms
-	env GPG_TTY=$$(tty) $(MAKE) init-gpg
-
+	mark docker
 	docker context create pod --docker host=tcp://localhost:2375 || true \
 		&& docker context create host --docker host=unix:///var/run/docker.sock || true \
         && docker context use host
-
-	mark configure repos
-
-	if nc -z -v localhost 8200 2>/dev/null; then \
-		$(MAKE) vault-unseal; \
-		fi
 
 	$(MAKE) login
 
@@ -81,6 +76,9 @@ logout:
 	-echo RELOADAGENT | gpg-connect-agent
 
 login:
+	mark vault
+	if nc -z -v localhost 8200 2>/dev/null; then \
+		$(MAKE) vault-unseal; fi
 	mark kubeconfig, argocd
 	if test -f /run/secrets/kubernetes.io/serviceaccount/ca.crt; then $(MAKE) kubeconfig; $(MAKE) argocd-login || true; fi
 	mark github
@@ -90,7 +88,7 @@ github-login:
 	if ! gh auth status; then echo Y | gh auth login -p https -h github.com -w; fi
 	-gh extension install cli/gh-webhook
 	if test -n "$${GIT_AUTHOR_NAME:-}"; then pass GHCR_TOKEN | docker login ghcr.io -u $$GIT_AUTHOR_NAME --password-stdin; fi
-	vault login -method=github token="$$(cat ~/.config/gh/hosts.yml  | yq -r '.["github.com"].oauth_token')"
+	-vault login -method=github token="$$(cat ~/.config/gh/hosts.yml  | yq -r '.["github.com"].oauth_token')"
 
 pull-repos: # Pull dev, app, home, and password-store repos
 	for a in . .dotfiles .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
