--- a/Makefile.common
+++ b/Makefile.common
@@ -90,8 +90,12 @@ github-login:
 	if test -n "$${GIT_AUTHOR_NAME:-}"; then pass GHCR_TOKEN | docker login ghcr.io -u $$GIT_AUTHOR_NAME --password-stdin; fi
 	-vault login -method=github token="$$(cat ~/.config/gh/hosts.yml  | yq -r '.["github.com"].oauth_token')"
 
-pull-repos: # Pull dev, app, home, and password-store repos
-	for a in . .dotfiles .password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
+home-repos: # Pull home, dotfiles and password-store repos
+	for a in ~ ~/.dotfiles ~/.password-store; do (echo; echo "$$a"; cd "$$a" && git pull) || true; done
+
+all-repos: # Pull home, current, dotiles, and password-store repos
+	$(MAKE) home-repos
+	git pull
 
 ec2:
 	pass hello
