--- a/Makefile.common
+++ b/Makefile.common
@@ -12,6 +12,7 @@ macos:
 	defaults write -g ApplePressAndHoldEnabled -bool false
 	-docker context create host --docker host=unix:///var/run/docker.sock
 	(echo "rdr pass inet proto tcp from any to any port 80 -> 127.0.0.1 port 5555"; echo "rdr pass inet proto tcp from any to any port 443 -> 127.0.0.1 port 5556") | sudo pfctl -ef -
+	mkdir -p /tmp/cache/nix
 
 symlinks:
 	mark configure symlinks
