--- a/Makefile.common
+++ b/Makefile.common
@@ -17,6 +17,8 @@ macos:
 symlinks:
 	mark configure symlinks
 	bash -x bin/persist-cache
+	ln -nfs ~/.nix-profile /tmp/
+	which vault-token-helper > ~/.vault
 
 perms:
 	mark configure permissions
