--- a/Makefile.common
+++ b/Makefile.common
@@ -6,7 +6,7 @@ first_ = $(word 1, $(subst _, ,$@))
 second_ = $(word 2, $(subst _, ,$@))
 
 macos:
-	-$(shell which gpg-agent) --daemon --pinentry-program $(which pinentry-mac)
+	-$(shell which gpg-agent) --daemon --pinentry-program $$(which pinentry-mac)
 	for ip in $(dummy_ip); do if ! ifconfig lo0 | grep "inet $$ip"; then sudo ifconfig lo0 alias "$$ip" netmask 255.255.255.255; fi; done;
 	ifconfig lo0
 	defaults write -g ApplePressAndHoldEnabled -bool false
