ignore make nix errors, not the right place to install profiles

--- a/Makefile.common
+++ b/Makefile.common
@@ -72,7 +72,7 @@ install-inner:
 	ssh-add -L; echo; echo
 
 nix:
-	if ! type -P nix; then . ~/.nix-profile/etc/profile.d/nix.sh; fi && $(MAKE) nix-$(shell uname -s)
+	if ! type -P nix; then . ~/.nix-profile/etc/profile.d/nix.sh; fi && ($(MAKE) nix-$(shell uname -s) || true)
 
 nix-Linux-bootstrap:
 	sh <(curl -L https://nixos.org/nix/install) --no-daemon
