use AES-256-GCM cipher

--- a/etc/openvpn/server.conf
+++ b/etc/openvpn/server.conf
@@ -5,6 +5,7 @@ ca etc/openvpn/pki/ca.crt
 cert etc/openvpn/pki/issued/server.crt
 key etc/openvpn/pki/private/server2.key
 dh etc/openvpn/pki/dh.pem
+cipher AES-256-GCM
 server 10.6.0.0 255.255.255.0
 topology subnet
 push "redirect-gateway def1 bypass-dhcp"
