auth with certs

--- a/etc/openvpn/client.conf
+++ b/etc/openvpn/client.conf
@@ -6,8 +6,9 @@ resolv-retry infinite
 nobind
 persist-key
 persist-tun
-auth-user-pass
 verb 3
 ca etc/openvpn/pki/ca.crt
+cert etc/openvpn/pki/issued/defn.crt
+key etc/openvpn/pki/private/defn2.key
 remote-cert-tls server
 cipher AES-256-GCM
