dont set default route

--- a/etc/openvpn/client.conf
+++ b/etc/openvpn/client.conf
@@ -12,3 +12,5 @@ cert etc/openvpn/pki/issued/defn.crt
 key etc/openvpn/pki/private/defn2.key
 remote-cert-tls server
 cipher AES-256-GCM
+pull-filter ignore "route-gateway"
+route-nopull
