--- a/etc/nix.conf
+++ b/etc/nix.conf
@@ -3,8 +3,9 @@
 # sudo launchctl start org.nixos.nix-daemon
 
 build-users-group = nixbld
-substituters = https://cache.nixos.org https://defn.cachix.org file:///tmp/cache/nix?trusted=1
-trusted-substituters = file:///tmp/cache/nix
-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA=
 trusted-users = root defn
+
+substituters = https://cache.nixos.org https://wh.fly.dev?priority=30 file:///tmp/cache/nix?priority=2&trusted=1 
+trusted-substituters = file:///tmp/cache/nix
+trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= defn.cachix.org-1:MW+8NHAeU9Cz/0afkvv5K42xCnFO8jHRadrHlXfBHmA= wh.fly.dev:CY8OGUBrwUv+fg5H5RJxEIc1gO/sp9LgwAPG6Ln7tfU=
 require-sigs = true
