reset path for terminals

--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -24,6 +24,9 @@
             ]
         },
     },
+    "terminal.integrated.env.linux": {
+        "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    },
     "workbench.colorTheme": "Default Dark+",
     "workbench.editor.untitled.hint": "hidden",
     "workbench.startupEditor": "none",
