--- a/Makefile.common
+++ b/Makefile.common
@@ -7,6 +7,7 @@ second_ = $(word 2, $(subst _, ,$@))
 
 macos:
 	-$(shell which gpg-agent) --daemon --pinentry-program $$(which pinentry-mac)
+	-$(shell which dirmngr) --daemon
 	for ip in $(dummy_ip); do if ! ifconfig lo0 | grep "inet $$ip"; then sudo -A ifconfig lo0 alias "$$ip" netmask 255.255.255.255; fi; done;
 	ifconfig lo0
 	defaults write -g ApplePressAndHoldEnabled -bool false
