--- a/etc/openvpn/client.conf
+++ b/etc/openvpn/client.conf
@@ -7,7 +7,7 @@ nobind
 persist-key
 persist-tun
 verb 3
-ca etc/openvpn/pki/ca.crt
+ca work/openvpn/pki/ca.crt
 cert work/openvpn/pki/issued/defn.crt
 key work/openvpn/pki/private/defn2.key
 remote-cert-tls server
