--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,7 @@
 	},
   "mounts": [
     "source=work,target=/workspaces",
-    "source=nix,target=/nix"
+    "source=nix,target=/nix",
+    "source=nix-cache,target=/cache"
   ]
 }
