dont mess with gitconfig

--- a/.local/share/code-server/User/settings.json
+++ b/.local/share/code-server/User/settings.json
@@ -57,5 +57,10 @@
     "git.ignoreLimitWarning": true,
     "diffEditor.ignoreTrimWhitespace": false,
     "git.openRepositoryInParentFolders": "always",
-    "go.terminal.activateEnvironment": false,"remote.SSH.remotePlatform": {"coder-vscode--amanibhavam--immanent":"darwin"}
+    "dev.containers.copyGitConfig": true,
+    "dev.containers.gitCredentialHelperConfigLocation": "none",
+    "go.terminal.activateEnvironment": false,
+    "remote.SSH.remotePlatform": {
+        "coder-vscode--amanibhavam--immanent": "darwin"
+    }
 }
