run devcontainer in privileged mode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
 		"source=nix-cache,target=/cache"
 	],
 	"runArgs": [
+		"--privileged",
 		"--env-file",
 		"${localWorkspaceFolder}/.dotfiles/.env"
 	]
